# symbolic-rl-snake

./: .gitignore  README.md  main.py  patch_all.diff  patch_eat_fix.diff  patch_loopbreak.diff  patch_reward.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
runs/: eval_seed1.jsonl  latest.jsonl  normal100.jsonl  run50.jsonl  train_seed1.jsonl
scripts/: compare_runs.py  migrate_state.ps1  migrate_state.sh  reset_state.ps1  reset_state.sh  run_benchmark.py
snake/: __init__.py  agent.py  cli.py  config.py  game.py  memory.py  rules.py  utils.py
state/: game_state.json  symbolic_memory.msgpack
tests/: test_determinism.py  test_game_rules.py  test_memory.py  test_smoke.py
