[project]
name = "snake-agent"
version = "0.1.0"
description = "Autonomous Snake game with a lightweight agent and persistent experience memory."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "numpy>=1.24",
  "msgpack>=1.0.7",
  "pygame>=2.5.0",
]

[project.urls]
Repository = "https://github.com/yourname/snake-agent"

[tool.setuptools]
packages = ["snake"]
