[project]
name = "snake-agent"
version = "0.1.0"
description = "Autonomous Snake game with a lightweight agent and persistent experience memory."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
dependencies = [
  "msgpack>=1.0.7",
  "pygame>=2.5.0",
]

[project.urls]
Repository = "https://github.com/OdinFenrir/symbolic-rl-snake"

[project.scripts]
snake-agent = "snake.__main__:main"

[tool.setuptools]
packages = ["snake"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["snake-*", "tmp-*", ".pytest_cache"]
